src/test/ui/regions/regions-return-ref-to-upvar-issue-17403.stderr
error: borrowed data cannot be stored outside of its closure
  --> $DIR/regions-return-ref-to-upvar-issue-17403.rs:17:24
   |
LL |         let mut f = || &mut x; //~ ERROR borrowed data cannot be stored outside of its closure
   |             -----   -- ^^^^^^ cannot be stored outside of its closure
   |             |       |
   |             |       ...because it cannot outlive this closure
   |             borrowed data cannot be stored into here...

error: aborting due to previous error

